SEARCHLDAP-1 : correction of sonar issues. Jalopy format.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/authentication/plugin-searchldap@65610 bab10101-e421-0410-a517-8ce0973de3ef